@@ -1,3 +1,7 @@
+2002-09-29  Sam Steingold  <sds@gnu.org>
+
+	* intparam.c: include <stdlib.h> for exit(3) to avoid a warning
+
 2002-09-26  Sam Steingold  <sds@gnu.org>
 
 	SOCKET:SOCKET-OPTIONS - an interface to getsockopt/setsockopt
